# podcats

./: .gitignore  .travis.yml  MANIFEST.in  README.rst  podcats.py  pyproject.toml  setup.py
.github/workflows/: build.yml
podcats/: __init__.py
podcats/templates/: episode.html  episode.xml  episode_description.html  feed.html  feed.xml
templates/: episode.html  episode.xml  feed.html
